--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -19,9 +19,17 @@ body {
 
 .button-container {
   background: #e3f4ff;
+  margin: 8px auto;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  
+  display: block;
+  margin: 0 auto;
+  
+  
+  
 }
