--- a/foundations/block-and-inline/01-margin-and-padding-1/style.css
+++ b/foundations/block-and-inline/01-margin-and-padding-1/style.css
@@ -7,14 +7,16 @@ body {
   background: pink;
   border: 3px solid blue;
   /* CHANGE ME */
-  padding: 0px;
+  width: 80%;
+  padding: 10px;
   margin: 0px;
+  
 }
 
 .two {
   background: lightblue;
   border: 3px solid purple;
-  /* CHANGE ME */
+  margin-top: 10px;
   margin-bottom: 0px;
 }
 
@@ -24,5 +26,5 @@ body {
   width: 200px;
   /* CHANGE ME */
   padding: 0px;
-  margin-left: 0px;
+  margin-left: 100px;
 }
